kubeflow/pipelines/patches/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pipeline-ui-ingress
  namespace: kubeflow
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: ca-issuer
spec:
  rules:
  - host: pipeline-ui.127.0.0.1.nip.io
    http:
      paths:
      - backend:
          service:
            name: ml-pipeline-ui
            port:
              name: https
          path: /
          pathType: Prefix
  tls:
    - secretName: pipeline-ui.127.0.0.1.nip.io
      hosts:
        - pipeline-ui.127.0.0.1.nip.io
